// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> it render Accordion with controlled state 1`] = `
<Accordion
  dataAttrs={
    Object {
      "arrowDown": Object {
        "data-test": "data-test-value",
      },
      "arrowUp": Object {
        "data-test": "data-test-value",
      },
      "collapse": Object {
        "data-test": "data-test-value",
      },
      "header": Object {
        "data-test": "data-test-value",
      },
      "root": Object {
        "data-test": "data-test-value",
      },
      "titleWrap": Object {
        "data-test": "data-test-value",
      },
    }
  }
  hasVerticalPaddings={false}
  isOpened={true}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-accordion mfui-accordion_open"
    data-test="data-test-value"
  >
    <div
      className="mfui-accordion__title-wrap"
      data-test="data-test-value"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <Header
        as="h5"
        data-test="data-test-value"
      >
        <h5
          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-accordion__icon-box mfui-accordion__icon-box_open"
        role="button"
        tabIndex={0}
      >
        <test-file-stub
          data-test="data-test-value"
        />
      </div>
    </div>
    <Collapse
      className="mfui-accordion__content"
      classNameContainer="mfui-accordion__content-inner"
      data-test="data-test-value"
      isOpened={true}
    >
      <div
        className="mfui-accordion__content"
        style={
          Object {
            "height": "auto",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it render Accordion with vertical inner paddings 1`] = `
<Accordion
  dataAttrs={
    Object {
      "arrowDown": Object {
        "data-test": "data-test-value",
      },
      "arrowUp": Object {
        "data-test": "data-test-value",
      },
      "collapse": Object {
        "data-test": "data-test-value",
      },
      "header": Object {
        "data-test": "data-test-value",
      },
      "root": Object {
        "data-test": "data-test-value",
      },
      "titleWrap": Object {
        "data-test": "data-test-value",
      },
    }
  }
  hasVerticalPaddings={true}
  isOpened={false}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-accordion"
    data-test="data-test-value"
  >
    <div
      className="mfui-accordion__title-wrap"
      data-test="data-test-value"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <Header
        as="h5"
        data-test="data-test-value"
      >
        <h5
          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-accordion__icon-box"
        role="button"
        tabIndex={0}
      >
        <test-file-stub
          data-test="data-test-value"
        />
      </div>
    </div>
    <Collapse
      className="mfui-accordion__content"
      classNameContainer="mfui-accordion__content-inner mfui-accordion__content-inner_v-padding"
      data-test="data-test-value"
      isOpened={false}
    >
      <div
        className="mfui-accordion__content"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-accordion__content-inner mfui-accordion__content-inner_v-padding"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;

exports[`<Accordion /> it renders Accordion 1`] = `
<Accordion
  dataAttrs={
    Object {
      "arrowDown": Object {
        "data-test": "data-test-value",
      },
      "arrowUp": Object {
        "data-test": "data-test-value",
      },
      "collapse": Object {
        "data-test": "data-test-value",
      },
      "header": Object {
        "data-test": "data-test-value",
      },
      "root": Object {
        "data-test": "data-test-value",
      },
      "titleWrap": Object {
        "data-test": "data-test-value",
      },
    }
  }
  hasVerticalPaddings={false}
  isOpened={false}
  onClickAccordion={[MockFunction]}
  title="Test"
>
  <div
    className="mfui-accordion"
    data-test="data-test-value"
  >
    <div
      className="mfui-accordion__title-wrap"
      data-test="data-test-value"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <Header
        as="h5"
        data-test="data-test-value"
      >
        <h5
          className="mfui-header mfui-header_color_default mfui-header_level_h5 mfui-header_h-align_inherit"
        >
          Test
        </h5>
      </Header>
      <div
        className="mfui-accordion__icon-box"
        role="button"
        tabIndex={0}
      >
        <test-file-stub
          data-test="data-test-value"
        />
      </div>
    </div>
    <Collapse
      className="mfui-accordion__content"
      classNameContainer="mfui-accordion__content-inner"
      data-test="data-test-value"
      isOpened={false}
    >
      <div
        className="mfui-accordion__content"
        style={
          Object {
            "height": "0px",
            "overflow": "hidden",
            "transition": "height 0.3s",
          }
        }
      >
        <div
          className="mfui-accordion__content-inner"
        >
          <div />
        </div>
      </div>
    </Collapse>
  </div>
</Accordion>
`;
